sync: correct previous code to work with Java 8 (#540)